--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@doubleshot/nest-electron": "^0.2.5",
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/microservices": "^10.3.8",
+    "@nestjs/platform-express": "^10.4.4",
     "@nestjs/typeorm": "^9.0.1",
     "element-plus": "^2.8.3",
+    "es-toolkit": "^1.22.0",
     "fs-extra": "^11.2.0",
     "moment": "^2.30.1",
     "pinia": "^2.2.2",
