--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@doubleshot/nest-electron": "^0.2.5",
+    "@element-plus/icons-vue": "^2.3.1",
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/event-emitter": "^2.0.4",
