fix: 修复执行规则的时间不准的bug
同时修复有多个定时任务时，点击删除页面显示异常的bug

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fast-vite-nestjs-electron",
-  "version": "0.0.1",
+  "name": "timer-task",
+  "version": "1.0.0",
   "packageManager": "pnpm@9.11.0",
-  "description": "Vite + Electron with Doubleshot, so fast! ⚡",
+  "description": "Run tasks at specified times",
   "main": "dist/main/index.js",
   "scripts": {
     "dev": "rimraf dist && vite",
